# elas_osbi

./: .gitignore  .gitmodules  CMakeLists.txt  fast-setup.sh  make-sdk.sh  make-sodium.sh  source.sh
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
build-dir/examples/: Makefile  cmake_install.cmake
build-dir/examples/hello/: Makefile  cmake_install.cmake
build-dir/examples/hello-native/: Makefile  cmake_install.cmake  hello-native
build-dir/examples/hello-native/runtime/tmp/: eyrie-hello-native-eyrie-gitclone.cmake
build-dir/examples/hello/runtime/tmp/: eyrie-hello-eyrie-gitclone.cmake
build-dir/examples/tests/: Makefile  cmake_install.cmake
build-dir/examples/tests/runtime/tmp/: eyrie-test-eyrie-gitclone.cmake
build-dir/scripts/: run-qemu.sh
build-dir/sm.build/lib/sbi/: riscv_asm.dep  riscv_atomic.dep  riscv_hardfp.dep  riscv_locks.dep  sbi_bitmap.dep  sbi_bitops.dep  sbi_console.dep  sbi_domain.dep  sbi_ecall.dep  sbi_ecall_base.dep  sbi_ecall_hsm.dep  sbi_ecall_legacy.dep  sbi_ecall_replace.dep  sbi_ecall_vendor.dep  sbi_emulate_csr.dep  sbi_expected_trap.dep  sbi_fifo.dep  sbi_hart.dep  sbi_hfence.dep  sbi_hsm.dep  sbi_illegal_insn.dep  sbi_init.dep  sbi_ipi.dep  sbi_math.dep  sbi_misaligned_ldst.dep  sbi_platform.dep  sbi_scratch.dep  sbi_string.dep  sbi_system.dep  sbi_timer.dep  sbi_tlb.dep  sbi_trap.dep  sbi_unpriv.dep
build-dir/sm.build/lib/utils/fdt/: fdt_domain.dep  fdt_fixup.dep  fdt_helper.dep
build-dir/sm.build/lib/utils/ipi/: fdt_ipi.dep  fdt_ipi_clint.dep
build-dir/sm.build/lib/utils/irqchip/: fdt_irqchip.dep  fdt_irqchip_plic.dep  plic.dep
build-dir/sm.build/lib/utils/libfdt/: fdt.dep  fdt_addresses.dep  fdt_check.dep  fdt_ro.dep  (+5 more)
build-dir/sm.build/platform/generic/: platform.dep  sifive_fu540.dep
build-dir/sm.build/src/: attest.dep  cpu.dep  crypto.dep  enclave.dep  ipi.dep  mprv.dep  pmp.dep  sbi_trap_hack.dep  sm-sbi-opensbi.dep  sm-sbi.dep  sm.dep  thread.dep  trap.dep
build-dir/sm.build/src/ed25519/: fe.dep  ge.dep  keypair.dep  sc.dep  sign.dep
build-dir/sm.build/src/hkdf_sha3_512/: hkdf_sha3_512.dep
build-dir/sm.build/src/hmac_sha3/: hmac_sha3.dep
build-dir/sm.build/src/plugins/: plugins.dep
build-dir/sm.build/src/sha3/: sha3.dep
examples/: CMakeLists.txt  README.md
linux-keystone-driver/: keystone-enclave.c  keystone-ioctl.c  keystone-sbi.c  keystone-sbi.h  keystone.c  keystone.h  keystone_user.h
sdk/: macros.cmake
sdk/build64/include/app/: ecall.h  ks_string.h  rpc.h
sdk/build64/include/edge/: edge_common.h  edge_dispatch.hpp  edge_syscall.hpp  syscall_nums.h
sdk/build64/include/host/: Enclave.hpp  Error.hpp  common.h  keystone_user.h  performance.h
sdk/build64/include/include/: Makefile
sdk/examples/: CMakeLists.txt
sdk/examples/client-server/: CMakeLists.txt
sdk/examples/client-server/host/: host.cpp
sdk/examples/hello/: CMakeLists.txt
sdk/examples/hello/host/: host.cpp
sdk/include/app/: ecall.h  icall.h  syscall.h  types.h
sdk/include/edge/: edge_call.h  edge_dispatch.h  edge_dispatch.hpp  edge_syscall.h
sdk/include/host/: Enclave.hpp  Params.hpp  keystone_user.h
sdk/lib/app/: Makefile
sdk/lib/edge/: Makefile
sdk/lib/host/: Makefile
sdk/lib/host/include/: common.h
sdk/lib/host/src/: keystone.cpp
sdk/lib/verifier/: Makefile
sdk/rts/eyrie/: .options_log  boot.c  build.sh  eyrie-rt  interrupt.c  printf.c  sbi.h  syscall.c  vm.h
sdk/src/app/: CMakeLists.txt  ecall.c  icall.c  rpc.c  syscall.c
sdk/src/edge/: CMakeLists.txt  edge_call.c  edge_dispatch.cpp  edge_syscall.c  edge_syscall.cpp
sdk/src/host/: Enclave.cpp  Memory.cpp
sm/plat/generic/: objects.mk
sm/plat/sifive/fu540/: objects.mk
sm/src/: attest.c  consts.h  cpu.c  cpu.h  enclave-request.h  enclave.c  enclave.h  ipi.c  ipi.h  performance.h  perm.h  pmp.c  pmp.h  region.c  region.h  sbi_trap_hack.c  sm-sbi-opensbi.c  sm-sbi.c  sm-sbi.h  sm.c  sm.h
tests/tests/: Makefile
(+23 files in other folders)
